--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         </div>
       </div>
       <a href="#C6">REVIEW</a>
+      <div style="float:right"><a class="active" href="#about">ABOUT THE AUTHOR</a></div>
     </div>
 
   <div>
@@ -132,6 +133,12 @@
     <li>Trello was quintessential in keeping me time conscious as well as organizing my objectives during the scoping and planning phases of the website.</li><li>VS Code was the IDE of my choice during the development phase of my project, writing and compiling code. The only problem that I encountered with VS Code during the course of the project was the fact that I had to constantly and consistently revert from web browser to software package and vice versa in order to know what my website looked like.</li>
 <li>Codepen proved better suited for my project that vs code seeing as I was able to view my website in real time as I wrote and compiled code. Codepen also allowed me to work with html, css and javascript without switching tabs.</li>
   </div>
+  <div class="footer">
+  <p>Posted by: Chiebuka Mbata</p>
+  <p>Contact information: <a href="email">rockymmpr@gmail.com</a></p>
+</div>
+  
+</div>
 </body>
 </html>
   
