--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
         </div>
       </div>
       <a href="#C6">REVIEW</a>
-      <div style="float:right"><a class="active" href="#about">ABOUT THE AUTHOR</a></div>
+      <div style="float:right"><a href="#C7">ABOUT THE AUTHOR</a></div>
     </div>
-
   <div>
     <h1 id="myHeader">Romanticising Innovation: The Role of InfoTech In Modern Business</h1>
     <p id="quote">"I do not fear computers, I fear lack of them" - Isaac Asimov</p>
@@ -132,7 +131,11 @@
     <p class="paragraph">The ongoing tools available to me, as described under the RESOURCES section, are capable of rendering a digital project to its completion</p>  
     <li>Trello was quintessential in keeping me time conscious as well as organizing my objectives during the scoping and planning phases of the website.</li><li>VS Code was the IDE of my choice during the development phase of my project, writing and compiling code. The only problem that I encountered with VS Code during the course of the project was the fact that I had to constantly and consistently revert from web browser to software package and vice versa in order to know what my website looked like.</li>
 <li>Codepen proved better suited for my project that vs code seeing as I was able to view my website in real time as I wrote and compiled code. Codepen also allowed me to work with html, css and javascript without switching tabs.</li>
+      <h3 id="C7">ABOUT THE AUTHOR</h3>
+    <p>Chiebuka Mbata is a first class degree holder in Petroleum and Mechanical Engineering. Chiebuka is fond of problem-solving and has identified key areas within the petroleum industry where software skills would come in handy. In the past, he has demonstrated great logical reasoning ability as can be seen in his first class petroleum engineering project and subsequent software coding projects that followed.</p>
   </div>
+  
+  
   <div class="footer">
   <p>Posted by: Chiebuka Mbata</p>
   <p>Contact information: <a href="email">rockymmpr@gmail.com</a></p>
